# trap

./: .gitignore  Cargo.toml  README.md
.github/workflows/: test.yml
aras/: Cargo.toml  README.md
aras/mocks/: application.rs  communication.rs  mod.rs  stream.rs
aras/src/: application.rs  communication.rs  error.rs  errors.rs  http.rs  lib.rs  lifespan.rs  main.rs  scope.rs  server.rs  service.rs  types.rs  websocket.rs
aras/src/layers/: error_handler.rs  mod.rs
aras/src/middlewares/: concurrency_limit.rs  concurrency_limiter.rs  logger.rs  max_size.rs  mod.rs  request_body_limit.rs  timeout.rs
aras/src/protocols/: http.rs  lifespan.rs  mod.rs  websocket.rs
aras/src/server/: config.rs  connection_info.rs  mod.rs  server.rs  service.rs
aras/src/test_assets/: applications.rs  arrange.rs  mod.rs
aras/test_utils/: application_mocks.rs  applications.rs  communication_mocks.rs  stream_mock.rs
aras/tests/utils/: applications.rs
aras_core/: Cargo.toml
aras_core/src/: application.rs  asgispec.rs  error.rs
aras_core/src/http/: events.rs  handler.rs
aras_core/src/lifespan/: events.rs  handler.rs
aras_core/src/server/: server.rs  service.rs
aras_core/src/websocket/: events.rs  handler.rs
aras_docker/: Dockerfile-aras-0.3.0-python-3.11-rustc-1.83  README.md
aras_py/: Cargo.toml  Dockerfile  README.md  pyproject.toml
aras_py/aras/: __init__.py  aras.py  aras.pyi  aras_types.py  cli.py  main.py
aras_py/aras/aras_core/: aras_core.pyi
aras_py/demos/: asgi_minimal.py  hot_reload.py  run_worker.py
aras_py/pytests/: conftest.py  test_http.py  test_websocket.py
aras_py/pytests/utils/application/: main.py  notes.py  ws.py
aras_py/pytests/utils/test_application/app/: files.py  io_models.py  main.py  ws.py
aras_py/pytests/utils/test_application/app/templates/: item.html
aras_py/python/aras/: __init__.py  aras.pyi  cli.py  config.py  serve.py  supervisor.py  types.py
aras_py/python/aras/worker/: worker.py
aras_py/scripts/: build-linux-arm64-wheel.sh
aras_py/src/: convert.rs  lib.rs  tracing.rs  wrappers.rs
aras_py/src/in_process/: convert.rs  mod.rs  wrappers.rs
aras_py/src/worker/: mod.rs  pool.rs  worker.rs
aras_py/test_application/: README.md
aras_py/test_application/app/: basic.py
aras_py/tests/: conftest.py  run_worker.py  test_asgi_protocol.py  test_cli.py  test_http.py  test_middleware.py  test_websocket.py
aras_py/tests/apps/autobahn/: main.py
aras_py/tests/apps/fastapi/: basic.py  database.py  db_models.py  io_models.py  main.py  notes.py  stream.py  templates.py  ws.py
aras_py/tests/apps/protocol/: main.py
aras_py/tests/autobahn/: run.sh
aras_py/tests/autobahn/autobahn_reports/: aras_case_10_1_1.html  aras_case_10_1_1.json  aras_case_12_1_1.html  aras_case_12_1_1.json  aras_case_12_1_10.html  aras_case_12_1_10.json  aras_case_12_1_11.html  aras_case_12_1_11.json  aras_case_12_1_12.html  aras_case_12_1_12.json  aras_case_12_1_13.html  aras_case_12_1_13.json  aras_case_12_1_14.html  aras_case_12_1_14.json  aras_case_12_1_15.html  aras_case_12_1_15.json  aras_case_12_1_16.html  aras_case_12_1_16.json  aras_case_12_1_17.html  aras_case_12_1_17.json  aras_case_12_1_18.html  aras_case_12_1_18.json  aras_case_12_1_2.html  aras_case_12_1_2.json  aras_case_12_1_3.html  aras_case_12_1_3.json  aras_case_12_1_4.html  aras_case_12_1_4.json  aras_case_12_1_5.html  aras_case_12_1_5.json  aras_case_12_1_6.html  aras_case_12_1_6.json  aras_case_12_1_7.html  aras_case_12_1_7.json  aras_case_12_1_8.html  aras_case_12_1_8.json  aras_case_12_1_9.html  aras_case_12_1_9.json  aras_case_12_2_1.html  aras_case_12_2_1.json  (+996 more)
aras_py/tests/autobahn/config/: fuzzingclient.json
aras_py/tests/utils/: arrange.py
aras_py/tests/utils/application/: basic.py  database.py  db_models.py  main.py  notes.py  ws.py
aras_py/tests/utils/application/static/: styles.css
aras_py/tests/utils/test_application/: requirements.txt
asgispec/: Cargo.toml  README.md
asgispec/src/: lib.rs  prelude.rs  spec.rs
asgispec/src/events/: http.rs  lifespan.rs  mod.rs  websocket.rs
asgispec/src/scope/: http.rs  lifespan.rs  mod.rs  websocket.rs
demo_application/: Dockerfile  README.md
demo_application/app/: database.py  db_models.py  stream.py  templates.py
src/: wrappers.rs
