[package]
name = "aras"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
asgispec = { path = "../asgispec" }
hyper = { version = "^1", features = ["full"] }
hyper-util = { version = "^0.1", features = ["service"] }
tower = { version = "^0.5.0", features = ["limit", "timeout"] }
tower-http = { version = "^0.6.0", features = ["full"] }
derive_more = { version = "^1.0.0", features = ["full"] }
tokio = { version = "^1.13", features = ["full"] }
async-stream = "^0.3.6"
http = "^1.1.0"
log = "^0.4.0"
thiserror = "^2.0.0"
http-body = "1.0"
http-body-util = "^0.1"
bytes = "^1.2"
futures = "^0.3.0"
futures-util = "^0.3.0"
fastwebsockets = { version = "0.9.0", features = ["upgrade"] }
async-channel = "2.3.1"

[dev-dependencies]
