[package]
name = "aras"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ASGI specification
asgispec = { path = "../asgispec" }

# core tower - tokio - hyper stack
bytes = "^1.2"
tokio = { version = "^1.13", features = ["full"] }
tokio-util = "0.7.17"
hyper = { version = "^1", features = ["full"] }
hyper-util = { version = "^0.1", features = ["full"] }
tower = { version = "^0.5.0", features = ["full"] }
tower-http = { version = "0.6.7", features = ["full"] }

# async utilities
futures = "^0.3.0"
futures-util = "^0.3.0"
async-stream = "^0.3.6"
async-channel = "2.3.1"

# protocols
http = "^1.1.0"
http-body = "1.0"
http-body-util = "^0.1"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }

# logging
log = "^0.4.0"
tracing = "0.1.43"

# Other utilities
derive_more = { version = "^1.0.0", features = ["full"] }
thiserror = "^2.0.0"

[dev-dependencies]
