[package]
name = "aras_py"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aras"
crate-type = ["cdylib"]

[dependencies]
aras = { path = "../aras" }
asgispec = { path = "../asgispec" }

pyo3 = { version = "^0.27.2", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["attributes", "tokio-runtime"] }

log = "0.4.22"
tracing-subscriber = "0.3.22"
tracing = "0.1.43"

bytes = "^1.2"
tokio = { version = "1.13", features = ["full"] }
tokio-util = "0.7.17"

rmp-serde = "1.3.1"
serde = "1.0.228"
tokio-stream = "0.1.18" # TODO: do we need this

[package.metadata.maturin]
python-source = "python"
