[package]
name = "aras_py"
version = "0.5.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "aras"
crate-type = ["cdylib"]

[dependencies]
aras = { path = "../aras" }
asgispec = { path = "../asgispec" }

pyo3 = { version = "^0.27.2", features = ["experimental-async"] }
pyo3-async-runtimes = { version = "0.27.0", features = ["attributes", "tokio-runtime"] }

tracing = "0.1.43"

bytes = "^1.2"
tokio = { version = "1.13", features = ["full"] }
tokio-util = "0.7.17"
pyo3-log = "0.13.3"

[package.metadata.maturin]
python-source = "python"
