[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aras"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]

[project.scripts]
aras = "aras.cli:cli"

[tool.maturin]
features = ["pyo3/extension-module"]

dependencies = [
    "click >= 8.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "mypy",
    "httpx",
    "pytest-timeout",
    "maturin",
    "fastapi",
    "sqlalchemy",
    "python-multipart",
    "websockets",
    "fastapi-utils",
    "typing-inspect",
    "jinja2",
]