[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "aras"
version = "1.0.0"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click >= 8.0.0",
    "watchfiles>=1.0.0",
]

[project.scripts]
aras = "aras.cli:cli"

[tool.maturin]
python-source = "python"
module-name = "aras"
bindings = "pyo3"
features = ["pyo3/extension-module"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "httpx",
    "mypy",
    "isort",
    "pytest-timeout",
    "maturin",
    "fastapi",
    "sqlalchemy",
    "python-multipart",
    "websockets",
    "fastapi-utils",
    "typing-inspect",
    "jinja2",
]